--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 
 #photo p {
   position: relative;
-  text-align: center;
+  text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   color: lightgreen;
   font-size: 30px;
