--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   background-color: black;
-  overflow: hidden;
+
 }
 
 #myCanvas {
@@ -10,8 +10,7 @@
   width: 100%;
   max-width: 608px;
   position: absolute;
-  border: 2px solid greenyellow;
-  height: 550px;
+  /* border: 2px solid greenyellow; */
 
 }
 
