--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,15 @@
   margin: 0;
   padding: 0;
   background-color: black;
-
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #myCanvas {
-  
-  width: 100%;
+  width: 85%;
   max-width: 608px;
   position: absolute;
   /* border: 2px solid greenyellow; */
-
 }
 
 #imageContainer {
