changed audio to mp3

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@ body {
   display: none;
   position: absolute;
 }
+#audio {
+  display: none;
+}
 
 @media only screen and (max-width: 768px) {
   #myCanvas {
